Issue #688: Remove fonts from assets